--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,65 +1,7 @@
+<app-header></app-header>
+<div class="container wrapper">
+    <app-search></app-search>
+    <app-product-list></app-product-list>
+</div>
+<app-footer></app-footer>
 
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">
-        <img src="/assets/images/logo.svg" width="40" height="40" alt="">
-        My-Store
-      </a>
-      <form class="form-inline">
-        <input class="form-control mr-sm-2" type="search" aria-label="Search">
-        <button class="btn btn-sm btn-outline-light" type="submit">Search</button>
-      </form>
-      <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Products</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">CheckOut</a>
-          </li>
-        </ul>
-        
-      </div>
-      <a class="navbar-brand" href="#">
-        <img class="cart" src="/assets/images/cart.svg" background-color="#6c757d" width="35" height="35" alt="">
-      </a>
-    </nav>
-    <div class="container wrapper">
-      <input class="form-control form-control-lg" type="text" placeholder="Search">
-      <div class="row mt-5">
-        <div class="col-4">
-            <div class="card" style="width: 18rem;">
-                <img src="/assets/images/image1.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Comet</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-        </div>
-        <div class="col-4">
-            <div class="card" style="width: 18rem;">
-                <img src="/assets/images/image2.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Bongo</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-        </div>
-        <div class="col-4">
-            <div class="card" style="width: 18rem;">
-                <img src="/assets/images/image3.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Hollis</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-        </div>
-      </div>
-    
-    </div>
-    <footer>
-        <p>&copy;Copyright. All Rights Reserved.</p>
-    </footer>
