--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,11 +1,11 @@
 
 <div class="row mt-5">
-        <app-product class="col-4"></app-product>
-        <app-product class="col-4"></app-product>
-        <app-product class="col-4"></app-product>
-        <app-product class="col-4"></app-product>
-        <app-product class="col-4"></app-product>
-        <app-product class="col-4"></app-product>
+        <app-product class="col-4" [productProperties]="product"></app-product>
+        <app-product class="col-4" [productProperties]="product"></app-product>
+        <app-product class="col-4" [productProperties]="product"></app-product>
+        <app-product class="col-4" [productProperties]="product"></app-product>
+        <app-product class="col-4" [productProperties]="product"></app-product>
+        <app-product class="col-4" [productProperties]="product"></app-product>
         <!-- <div class="col-4">
             <div class="card">
                 <img src="/assets/images/image2.png" class="card-img-top" alt="...">
