--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,11 +3,13 @@
           <img src="/assets/images/logo.svg" width="40" height="40" alt="">
           My-Store
         </a>
-        <form class="form-inline">
+        <!-- <div class="test rounded-circle">
+        </div> -->
+        <!-- <form class="form-inline">
           <input class="form-control mr-sm-2" type="search" aria-label="Search">
           <button class="btn btn-sm btn-outline-light" type="submit">Search</button>
-        </form>
-        <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
+        </form> -->
+        <div class="collapse navbar-collapse d-flex justify-content(-end" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="#">Products</a>
@@ -21,4 +23,5 @@
         <a class="navbar-brand" href="#">
           <img class="cart" src="/assets/images/cart.svg" background-color="#6c757d" width="35" height="35" alt="">
         </a>
+        <button class="btn btn-sm btn-outline-light" type="submit" (click)="addToCart()">Cart</button>
 </nav>
