--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -4,5 +4,6 @@
                 <img src="/assets/images/search.png" width="20" height="20">
           </div>
         </div>
-        <input type="text" class="form-control" placeholder="Search" aria-label="Input group example" aria-describedby="btnGroupAddon2">
+        <input [(ngModel)]="searchContent" type="text" class="form-control" placeholder="Search" aria-label="Input group example" aria-describedby="btnGroupAddon2">
 </div>
+<p>{{searchContent}}</p>
