--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
     <app-search></app-search>
     <app-product-list></app-product-list>
 </div>
+<p>{{productList | json}}</p>
 <app-footer></app-footer>
 
