--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,5 +23,5 @@
         <a class="navbar-brand" href="#">
           <img class="cart" src="/assets/images/cart.svg" background-color="#6c757d" width="35" height="35" alt="">
         </a>
-        <button class="btn btn-sm btn-outline-light" type="submit" (click)="addToCart()">Cart</button>
+        <button class="btn btn-sm btn-outline-light" type="submit" (click)="myCart()">Cart</button>
 </nav>
