--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 <div class="container wrapper">
-    <app-search></app-search>
-    <app-product-list></app-product-list>
+    <!-- <app-search></app-search> -->
+    <!-- <app-product-list></app-product-list> -->
+    <router-outlet></router-outlet>
 </div>
-<p>{{productList | json}}</p>
 <app-footer></app-footer>
 
