--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,4 +1,4 @@
-
+<app-search></app-search>
 <div class="row mt-5">
         <!-- *ngFor is for looping structure -->
         <app-product *ngFor="let item of productList" class="col-4" [productProperties]="item"></app-product>
