--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -10,13 +10,20 @@
     <div class="card-body">
       <h5 class="card-title">{{productProperties.title |uppercase}}</h5><!--stringInterpolation(Small conditions can be checked like ternary operator) -->
       <p class="card-text">{{productProperties.description}}</p>
-      <a href="#" class="btn btn-primary" (click)="addToCart()" *ngIf="productProperties.isAvailable; else elseBlock">
+      <a href="#" 
+      class="btn btn-primary" 
+      (click)="addToCart()" 
+      *ngIf="productProperties.isAvailable; else elseBlock">
         Buy Now
       </a>
-      <ng-template #elseBlock class="btn btn-secondary">
-          <button type="button" class="btn btn-warning" (click)="addToCart()">Sold Out</button> 
+      <ng-template 
+      #elseBlock class="btn btn-secondary">
+          <button type="button" 
+          class="btn btn-warning">Sold Out</button> 
       </ng-template>
-      <button type="button" class="btn btn-info" (click)="addToCart()">Details</button>
+      <button type="button" 
+      class="btn btn-info" 
+      (click)="goToDetails(productProperties.id)">Details</button> <!--To navigate to details-->
       <!-- <a href="#" class="btn btn-primary" -->
     </div>
 </div>
