--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,19 +9,26 @@
           <input class="form-control mr-sm-2" type="search" aria-label="Search">
           <button class="btn btn-sm btn-outline-light" type="submit">Search</button>
         </form> -->
-        <div class="collapse navbar-collapse d-flex justify-content(-end" id="navbarNav">
+        <div class="collapse navbar-collapse d-flex justify-content-end" 
+        id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Products</a>
+            <li class="nav-item" 
+            routerLinkActive="active" 
+            [routerLinkActiveOptions]="{exact: true}">
+              <a class="nav-link" routerLink="product" >Products</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">CheckOut</a>
+            <li class="nav-item" 
+            routerLinkActive="active" 
+            [routerLinkActiveOptions]="{exact: true}">
+              <a class="nav-link" routerLink="checkout">CheckOut</a>
             </li>
           </ul>
-          
+
         </div>
-        <a class="navbar-brand" href="#">
-          <img class="cart" src="/assets/images/cart.svg" background-color="#6c757d" width="35" height="35" alt="">
+        <a class="navbar-brand" href="">
+          <img class="cart" src="/assets/images/cart.svg" 
+          background-color="#6c757d" width="35" height="35" alt="">
         </a>
-        <button class="btn btn-sm btn-outline-light" type="submit" (click)="myCart()">Cart</button>
+        <button class="btn btn-sm btn-outline-light" 
+        type="submit" (click)="myCart()">Cart</button>
 </nav>
